[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gliss"
version = "0.1.0"
description = "Python bindings for GLISS, the Global Linear Ideal Stability Solver"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Christopher Albert"}]
requires-python = ">=3.9"
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest", "simsopt"]

[project.urls]
Homepage = "https://github.com/itpplasma/GLISS"

[tool.setuptools]
packages = ["gliss"]
